Tiny1-SintaxisAbstracta/src/asint/AnalizadorSintacticoTiny1JavaCC.java
/* Generated By:JavaCC: Do not edit this line. AnalizadorSintacticoTiny1JavaCC.java */
package asint;

public class AnalizadorSintacticoTiny1JavaCC implements AnalizadorSintacticoTiny1JavaCCConstants {
        private SemOps sem = new SemOps();

  final public Prog Sp() throws ParseException {
                                           Prog prog;
    prog = S();
    jj_consume_token(0);
                                                                          {if (true) return prog;}
    throw new Error("Missing return statement in function");
  }

  final public Prog S() throws ParseException {
                                           Decs decs; LInsts linsts;
    decs = Decs();
    linsts = LInsts();
                                                                                                        {if (true) return sem.prog(decs,linsts);}
    throw new Error("Missing return statement in function");
  }

  final public LDecs Decs() throws ParseException {
                                   LDecs decs;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Var:
    case Type:
    case Proc:
      decs = LDecs();
      jj_consume_token(42);
                                                                      {if (true) return decs;}
      break;
    default:
      jj_la1[0] = jj_gen;

                                                                                         {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  final public LDecs LDecs() throws ParseException {
                                   LDecs ldecs; Dec dec;
    dec = Dec();
    ldecs = RLDecs(sem.decs_una(dec));
                                                                                                         {if (true) return ldecs;}
    throw new Error("Missing return statement in function");
  }

  final public LDecs RLDecs(LDecs ldecsh) throws ParseException {
                                                   Ldecs decs; Dec dec;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
      jj_consume_token(43);
      dec = Dec();
      ldecs = RLDecs(sem.decs_muchas(ldecsh,dec));
                                                                                                                                    {if (true) return ldecs;}
      break;
    default:
      jj_la1[1] = jj_gen;

                                                                                                                                                         {if (true) return ldecsh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Dec Dec() throws ParseException {
                                           Tipo tipo; Token id; Paramsf paramsf; Bloque bloque;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Var:
      jj_consume_token(Var);
      tipo = Tipo();
      id = jj_consume_token(Id);
                                                                                                                                {if (true) return sem.dec_var(tipo,sem.str(id.image,id.beginLine,id.beginColumn));}
      break;
    case Type:
      jj_consume_token(Type);
      tipo = Tipo();
      id = jj_consume_token(Id);
                                                                                                                                                                                                    {if (true) return sem.dec_type(tipo,sem.str(id.image,id.beginLine,id.beginColumn));}
      break;
    case Proc:
      jj_consume_token(Proc);
      id = jj_consume_token(Id);
      jj_consume_token(44);
      paramsf = ParamsF();
      jj_consume_token(45);
      bloque = Bloque();
                                                                                                                                                                                                                                     {if (true) return sem.dec_proc(sem.str(id.image,id.beginLine,id.beginColumn),paramsf,bloque);}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public LparamsF ParamsF() throws ParseException {
                                           LparamsF lparamsf;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TipoInt:
    case TipoReal:
    case TipoBool:
    case TipoString:
    case Record:
    case Array:
    case Pointer:
    case Id:
      lparamsf = LParamsF();
                                                                                       {if (true) return lparamsf;}
      break;
    default:
      jj_la1[3] = jj_gen;

                                                                                                               {if (true) return sem.paramsf_vacio();}
    }
    throw new Error("Missing return statement in function");
  }

  final public LparamsF LParamsF() throws ParseException {
                                           ParamF paramf; LparamsF lparamsf;
    paramf = ParamF();
    lparamsf = RLParamsF(sem.lparamsf_uno(paramf));
                                                                                                                                             {if (true) return lparamsf;}
    throw new Error("Missing return statement in function");
  }

  final public LparamsF RLParamsF(LparamsF lparamsfh) throws ParseException {
                                                   LparamsF lparamsf; ParamF paramf;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      paramf = ParamF();
      lparamsf = RLParamsF(sem.lparamsf_muchos(lparamsfh,paramf));
                                                                                                                                                                           {if (true) return lparamsf;}
      break;
    default:
      jj_la1[4] = jj_gen;

                                                                                                                                                                                                   {if (true) return lparamsfh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public ParamF ParamF() throws ParseException {
                                   Tipo tipo; ParamF paramf;
    tipo = Tipo();
    paramf = RParamF(tipo);
                                                                                                     {if (true) return paramf;}
    throw new Error("Missing return statement in function");
  }

  final public ParamF RParamF(Tipo tipo) throws ParseException {
                                                   Token id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 47:
      jj_consume_token(47);
      id = jj_consume_token(Id);
                                                                            {if (true) return sem.paramf_referencia(tipo, sem.str(id.image,id.beginLine,id.beginColumn));}
      break;
    case Id:
      id = jj_consume_token(Id);
                                                                                                                         {if (true) return sem.paramf_valor(tipo,sem.str(id.image,id.beginLine,id.beginColumn));}
      break;
    default:
      jj_la1[5] = jj_gen;

                                                                                                                    {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Tipo Tipo() throws ParseException {
                                           Token id; Tipo tipo; LTipos ltipos;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TipoInt:
      jj_consume_token(TipoInt);
                                                                                            {if (true) return sem.tipo_int();}
      break;
    case TipoReal:
      jj_consume_token(TipoReal);
                                                                                                                                 {if (true) return sem.tipo_real();}
      break;
    case TipoBool:
      jj_consume_token(TipoBool);
                                                                                                                                                    {if (true) return sem.tipo_bool();}
      break;
    case TipoString:
      jj_consume_token(TipoString);
                                                                                                                                                                                            {if (true) return sem.tipo_string();}
      break;
    case Id:
      id = jj_consume_token(Id);
                                                                                                                                                 {if (true) return sem.tipo_ref(sem.str(id.image,id.beginLine,id.beginColumn));}
      break;
    case Array:
      jj_consume_token(Array);
      jj_consume_token(48);
      id = jj_consume_token(Entero);
      jj_consume_token(49);
      jj_consume_token(Of);
      tipo = Tipo();
                                                                                                                                                                                      {if (true) return sem.tipo_array(sem.str(id.image,id.beginLine,id.beginColumn),tipo);}
      break;
    case Record:
      jj_consume_token(Record);
      jj_consume_token(50);
      ltipos = LTipos();
      jj_consume_token(51);
                                                                                                                                                                          {if (true) return sem.record(ltipos);}
      break;
    case Pointer:
      jj_consume_token(Pointer);
      tipo = Tipo();
                                                                                                                                                               {if (true) return sem.tipo_pointer(tipo);}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public LTipos LTipos() throws ParseException {
                                   LTipos ltipos; Tipo tipo;
    tipo = Tipo();
    jj_consume_token(Id);
    ltipos = RLTipos(sem.tipos_uno(tipo));
                                                                                                                       {if (true) return ltipos;}
    throw new Error("Missing return statement in function");
  }

  final public LTipos RLTipos(LTipos ltiposh) throws ParseException {
                                                   LTipos ltipos; Tipo tipo;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
      jj_consume_token(43);
      tipo = Tipo();
      jj_consume_token(Id);
      ltipos = RLTipos(sem.tipos_muchos(ltiposh));
                                                                                                                                               {if (true) return ltipos;}
      break;
    default:
      jj_la1[7] = jj_gen;

                                                                                                                                                                    {if (true) return ltiposh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public LInsts LInsts() throws ParseException {
                                   Inst inst; LInsts linsts;
    inst = Inst();
    linsts = RLInsts(sem.insts_una(inst));
                                                                                                                {if (true) return linsts;}
    throw new Error("Missing return statement in function");
  }

  final public LInsts RLInsts(LInsts linstsh) throws ParseException {
                                                   Inst inst; LInsts linsts;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
      jj_consume_token(43);
      inst = Inst();
      linsts = RLInsts(sem.insts_muchas(linstsh));
                                                                                                                                          {if (true) return linsts;}
      break;
    default:
      jj_la1[8] = jj_gen;

                                                                                                                                                               {if (true) return linstsh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Inst Inst() throws ParseException {
                                           Exp exp0; Exp exp1; Insts insts; Bloque bloque; Paramsr paramsr; Token id; Inst inst;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Not:
    case True:
    case False:
    case Null:
    case Cadena:
    case Id:
    case Entero:
    case Real:
    case 44:
    case 54:
    case 57:
      exp0 = E0();
      jj_consume_token(52);
      exp1 = E0();
                                                                                                                                                  {if (true) return sem.inst_asig(exp0,exp1);}
      break;
    case If:
      jj_consume_token(If);
      exp0 = E0();
      jj_consume_token(Then);
      insts = Insts();
      inst = RInst(exp,insts);
                                                                                                                                                                                   {if (true) return inst;}
      break;
    case While:
      jj_consume_token(While);
      exp0 = E0();
      jj_consume_token(Do);
      insts = Insts();
      jj_consume_token(Endwhile);
                                                                                                                                                                         {if (true) return sem.inst_while(exp0,insts);}
      break;
    case Read:
      jj_consume_token(Read);
      exp0 = E0();
                                                                                                                                          {if (true) return sem.inst_read(exp0);}
      break;
    case Write:
      jj_consume_token(Write);
      exp0 = E0();
                                                                                                                                                                                           {if (true) return sem.write(exp0);}
      break;
    case Nl:
      jj_consume_token(Nl);
                                                                                                                              {if (true) return sem.inst_nl();}
      break;
    case New:
      jj_consume_token(New);
      exp0 = E0();
                                                                                                                                                                       {if (true) return sem.inst_new(exp0);}
      break;
    case Delete:
      jj_consume_token(Delete);
      exp0 = E0();
                                                                                                                                            {if (true) return sem.inst_delete(exp0);}
      break;
    case Call:
      jj_consume_token(Call);
      id = jj_consume_token(Id);
      jj_consume_token(44);
      paramsr = ParamsR();
      jj_consume_token(45);
                                                                                                                                                                  {if (true) return sem.inst_call(sem.str(id.image,id.beginLine,id.beginColumn),paramsr);}
      break;
    case 50:
      bloque = Bloque();
                                                                                                                                         {if (true) return sem.inst_bloque(bloque);}
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Inst RInst(Exp exp, Insts insts) throws ParseException {
                                                           Insts insts1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Endif:
      jj_consume_token(Endif);
                                                                                    {if (true) return sem.inst_if(exp,insts);}
      break;
    case Else:
      jj_consume_token(Else);
      insts1 = Insts();
      jj_consume_token(Endif);
                                                                                                                                                    {if (true) return sem.inst_if_else(exp,insts,insts1);}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Paramsr ParamsR() throws ParseException {
                                           Paramsr paramsr;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Not:
    case True:
    case False:
    case Null:
    case Cadena:
    case Id:
    case Entero:
    case Real:
    case 44:
    case 54:
    case 57:
      paramsr = LParamsR();
                                                                                  {if (true) return paramsr;}
      break;
    default:
      jj_la1[11] = jj_gen;

                                                                                                        {if (true) return paramsr_vacio();}
    }
    throw new Error("Missing return statement in function");
  }

  final public Lparamsr LParamsR() throws ParseException {
                                           Exp exp; Lparamsr lparamsr;
    exp = E0();
    lparamsr = RParamsR(sem.lparamsr_uno(exp));
                                                                                                                            {if (true) return lparamsr;}
    throw new Error("Missing return statement in function");
  }

  final public Lparamsr RParamsR(Lparamsr lparamsrh) throws ParseException {
                                                           Exp exp; Lparamsr lparamsr;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      exp = E0();
      lparamsr = RParamsR(sem.lparamsr_muchos(lparamsrh,exp));
                                                                                                                                                             {if (true) return lparamsr;}
      break;
    default:
      jj_la1[12] = jj_gen;

                                                                                                                                                                                    {if (true) return lparamsrh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Insts Insts() throws ParseException {
                                   LInsts linsts;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Not:
    case True:
    case False:
    case Null:
    case If:
    case While:
    case Call:
    case New:
    case Delete:
    case Read:
    case Write:
    case Nl:
    case Cadena:
    case Id:
    case Entero:
    case Real:
    case 44:
    case 50:
    case 54:
    case 57:
      linsts = LInsts();
                                                                       {if (true) return linsts;}
      break;
    default:
      jj_la1[13] = jj_gen;

                                                                                             {if (true) return insts_vacia();}
    }
    throw new Error("Missing return statement in function");
  }

  final public Bloque Bloque() throws ParseException {
                                   Bloque bloque;
    jj_consume_token(50);
    bloque = RBloque();
                                                                          {if (true) return bloque;}
    throw new Error("Missing return statement in function");
  }

  final public Bloque RBloque() throws ParseException {
                                           Bloque bloque;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Not:
    case True:
    case False:
    case Var:
    case Type:
    case Proc:
    case Null:
    case If:
    case While:
    case Call:
    case New:
    case Delete:
    case Read:
    case Write:
    case Nl:
    case Cadena:
    case Id:
    case Entero:
    case Real:
    case 44:
    case 50:
    case 54:
    case 57:
      bloque = S();
      jj_consume_token(51);
                                                                            {if (true) return sem.bloque_no_vacio(bloque);}
      break;
    case 51:

                                                                                                                      {if (true) return sem.bloque_vacio();}
      jj_consume_token(51);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E0() throws ParseException {
                                           Exp exp; Exp exp0;
    exp0 = E1();
    exp = RE0(exp);
                                                                                        {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RE0(Exp exph) throws ParseException {
                                                   Exp exp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 53:
      jj_consume_token(53);
      exp = E0();
                                                                            {if (true) return sem.exp("+",exph, exp);}
      break;
    case 54:
      jj_consume_token(54);
      exp = E0();
                                                                                                                           {if (true) return sem.exp("-",exph,exp);}
      break;
    default:
      jj_la1[15] = jj_gen;

                                                                                                                                                               {if (true) return exph;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E1() throws ParseException {
                                           Exp exp0; Exp exp;
    exp0 = E2();
    exp = RE1(exp0);
                                                                                         {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RE1(Exp exph) throws ParseException {
                                                   Exp exp2; Exp exp;String op;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case And:
    case Or:
      op = OpAI1();
      exp2 = E2();
      exp = RE1(sem.exp(op,exph,exp2));
                                                                                                                                       {if (true) return exp;}
      break;
    default:
      jj_la1[16] = jj_gen;

                                                                                                                                                         {if (true) return exph;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E2() throws ParseException {
                                           Exp exp; Exp exp0;
    exp0 = E3();
    exp = RE2(exp0);
                                                                                         {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RE2(Exp exph) throws ParseException {
                                                   String op; Exp exp; Exp exp2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 58:
    case 59:
    case 60:
    case 61:
    case 62:
    case 63:
      op = OpAI2();
      exp2 = E3();
      exp = RE2(sem.exp(op,exph,exp2));
                                                                                                                                          {if (true) return exp;}
      break;
    default:
      jj_la1[17] = jj_gen;

                                                                                                                                                             {if (true) return exph;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E3() throws ParseException {
                                           Exp exp0; Exp exp;
    exp0 = E4();
    exp = RE3(exp0);
                                                                                         {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RE3(Exp exph) throws ParseException {
                                                   String op; Exp exp0;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 57:
    case 64:
    case 65:
      op = OpNA3();
      exp0 = E4();
                                                                                                {if (true) return sem.exp(op,exph,exp0);}
      break;
    default:
      jj_la1[18] = jj_gen;

                                                                                                                                    {if (true) return exph;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E4() throws ParseException {
                                           Exp exp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 54:
      jj_consume_token(54);
      exp = E5();
                                                                    {if (true) return sem.menos(exp);}
      break;
    case Not:
      jj_consume_token(Not);
      exp = E4();
                                                                                                             {if (true) return sem.not(exp);}
      break;
    case True:
    case False:
    case Null:
    case Cadena:
    case Id:
    case Entero:
    case Real:
    case 44:
    case 57:
      exp = E5();

      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E5() throws ParseException {
                                           Exp exp; Exp exp0;
    exp0 = E6();
    exp = RE5(exp0);
                                                                                         {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RE5(Exp exph) throws ParseException {
                                                   Exp exp0; Token id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 55:
      jj_consume_token(55);
      id = jj_consume_token(Id);
                                                                                      {if (true) return sem.reg_punto(exph,sem.str(id.image,id.beginLine,id.beginColumn));}
      break;
    case 56:
      jj_consume_token(56);
      id = jj_consume_token(Id);
                                                                                                                               {if (true) return sem.reg_flecha(exph,sem.str(id.image,id.beginLine,id.beginColumn));}
      break;
    case 48:
      jj_consume_token(48);
      exp0 = E0();
      jj_consume_token(49);
                                                                                                                                    {if (true) return sem.indice(exph,rexp0);}
      break;
    default:
      jj_la1[20] = jj_gen;

                                                                                                                                                                          {if (true) return exph;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E6() throws ParseException {
                                           Exp exp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 57:
      jj_consume_token(57);
      exp = E6();
                                                                    {if (true) return sem.indirecto(exp);}
      break;
    case True:
    case False:
    case Null:
    case Cadena:
    case Id:
    case Entero:
    case Real:
    case 44:
      exp = E7();
                                                                                                           {if (true) return exp;}
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
